SET(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})

FILE(GLOB API_SRC *.c)
ADD_DEFINITIONS(-DTC_EXPORTS)

ADD_LIBRARY( tinkercellapi
	STATIC
#    SHARED
	${API_SRC}
)

IF ( WIN32 )
  INSTALL(TARGETS tinkercellapi DESTINATION lib )
ELSE ( WIN32 )
  INSTALL(TARGETS tinkercellapi ARCHIVE DESTINATION lib )
ENDIF( WIN32 )

FILE( GLOB API_SRC "*.h" "*.c")

INSTALL( FILES ${API_SRC} DESTINATION c )

