SET(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})

INCLUDE_DIRECTORIES( BEFORE
	${COPASIAPI_SOURCE_DIR}/libstructural
	${COPASIAPI_SOURCE_DIR}/libstructural/include
	${COPASIAPI_SOURCE_DIR}/copasi
)

FILE(GLOB LIBSTRUCT_SRC
    LibLA/*.cpp
    LibStructural/libstructural.cpp
)
  
ADD_DEFINITIONS(-DNO_SBML)
IF (WIN32)
	ADD_DEFINITIONS(-DWIN32)
	ADD_DEFINITIONS(-DLIB_EXPORTS)
ENDIF(WIN32)
#ADD_DEFINITIONS(-D__cplusplus)
#ADD_DEFINITIONS(-DNO_BLAS_WRAP)

ADD_LIBRARY ( structural
#   SHARED
  STATIC
  ${LIBSTRUCT_SRC}
)

TARGET_LINK_LIBRARIES( structural
  structural
  lapack
  blas
  f2c
)

